# MiniSmartTraffic

./: .eslintrc.js  README.md  package-lock.json
backend/: .gitignore  flask_server.py  mqtt_listener.py  traffic_data.db
docs/: initial_tech_draft.md  mqtt_protocol.md  practice.py
src/: App.vue  ViolationList.vue
test/: test_mqtt.py
traffic_light/: main.py
traffic_light_web/: package.json
traffic_light_web/src/: App.vue  ViolationCard.vue  ViolationList.vue
violation_detection/: Dockerfile  main.py  pyproject.toml
