[project]
name = "raspberry-pi-camera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "opencv-python>=4.11.0.86",
    "picamera2>=0.3.27",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]
